[build-system]
requires = [
    "setuptools>=77",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "mi-maica"

dynamic = [
    "version",
    "dependencies",
]

authors = [
    {name="EdgeInfinity", email="dcc@monika.love"}
]

description = "MAICA Illuminator (Backend)"

readme = "README.md"

license = "MIT"

requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

all = [
    "mi-mtts>=1.0.2"
]

mtts = [
    "mi-mtts>=1.0.2"
]

[project.scripts]
maica = "maica.maica_starter:full_start"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["maica*"]
exclude = ["maica.test_module*"]

[tool.setuptools.package-data]
maica = [
    "env_basis"
]

"maica.bin" = [
    "mi-serp-precompiled-binary-linux",
    "mi-serp-precompiled-binary-win.exe"
]


[tool.setuptools.dynamic]
version = {attr = "maica.version.__version__"}

dependencies = {file = ["requirements.txt"]}


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E402", "E7", "E9", "F541", "F63", "F7", "F811", "F82", "F841"]
